# Camellia

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  boot.asm  build.sh  config.h  io.c  linker.ld  main.c  qemu.bat  serial.c  serial.h  stdint.h  stdio.c  string.c  string.h  vga.c  vga.h
main/: config.h  io.c  io.h  main.c
modules/serial/: serial.c  serial.h
modules/vga/: vga.c  vga.h
stdlib/: stdint.h  stdio.c  stdio.h  string.c  string.h
